WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102744
[JSC] MutationObserver wrapper should not be collected while still observing
https://bugs.webkit.org/show_bug.cgi?id=102744
Summary
[JSC] MutationObserver wrapper should not be collected while still observing
Adam Klein
Reported
2012-11-19 17:17:34 PST
JSC support for the V8 capability added in
https://bugs.webkit.org/show_bug.cgi?id=102328
Attachments
Patch
(8.11 KB, patch)
2012-11-20 16:55 PST
,
Adam Klein
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.11 KB, patch)
2012-11-20 17:09 PST
,
Adam Klein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Klein
Comment 1
2012-11-20 16:55:04 PST
Created
attachment 175307
[details]
Patch
Adam Barth
Comment 2
2012-11-20 17:06:20 PST
Comment on
attachment 175307
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175307&action=review
> Source/WebCore/ChangeLog:14 > + if any of their observed nodes' roots an opaque root.
an -> is an ?
Adam Klein
Comment 3
2012-11-20 17:09:09 PST
Created
attachment 175308
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-11-20 17:36:30 PST
Comment on
attachment 175308
[details]
Patch for landing Clearing flags on attachment: 175308 Committed
r135337
: <
http://trac.webkit.org/changeset/135337
>
WebKit Review Bot
Comment 5
2012-11-20 17:36:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug