[JSC] MutationObserver wrapper should not be collected while still observing https://bugs.webkit.org/show_bug.cgi?id=102744

Reviewed by Adam Barth.

Source/WebCore:

This is the JSC side of the change landed for V8 in r135228.
It ensures MutationObserver wrapper objects are kept alive as long as
any observed nodes.

* bindings/js/JSMutationObserverCustom.cpp:
(WebCore::JSMutationObserverOwner::isReachableFromOpaqueRoots): Keep MutationObserver wrappers alive
if any of their observed nodes' roots is an opaque root.
* dom/MutationObserver.idl: Add JSCustomIsReachable

LayoutTests:

Remove suppressions for wrapper dropoff tests.

* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/121000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135337 268f45cc-cd09-0410-ab3c-d52691b4dbfc