Source/WebCore/bindings/js/JSMutationObserverCustom.cpp
@@ -58,6 +58,17 @@ EncodedJSValue JSC_HOST_CALL JSMutationObserverConstructor::constructJSMutationO
     return JSValue::encode(asObject(toJS(exec, jsConstructor->globalObject(), MutationObserver::create(callback.release()))));
 }
 
+bool JSMutationObserverOwner::isReachableFromOpaqueRoots(JSC::Handle<JSC::Unknown> handle, void*, SlotVisitor& visitor)
+{
+    MutationObserver* observer = jsCast<JSMutationObserver*>(handle.get().asCell())->impl();
+    HashSet<Node*> observedNodes = observer->getObservedNodes();
+    for (HashSet<Node*>::iterator it = observedNodes.begin(); it != observedNodes.end(); ++it) {
+        if (visitor.containsOpaqueRoot(root(*it)))
+            return true;
+    }
+    return false;
+}
+
 } // namespace WebCore
 
 #endif // ENABLE(MUTATION_OBSERVERS)
